[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Characters/CharacterPuppets/Scripts/Puppets/CharacterCore3D.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Characters/walk/char1_walk.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Characters/walk/hair_walk/gentleman_walk.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Characters/walk/clothes_walk/basic_walk.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Characters/shadow.png" type="Texture" id=5]
[ext_resource path="res://Scripts/SpriteRig.gd" type="Script" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.0835509
height = 0.0748424

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.000814669, 0.0198756, 0.0045568 )
shape = SubResource( 1 )

[node name="Timers" type="Spatial" parent="."]

[node name="InvincibleDuration" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="Modules" type="Spatial" parent="."]

[node name="ShadowCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -2, 0 )

[node name="NonFollow" type="Node" parent="."]

[node name="ShadowSprite" type="Sprite3D" parent="NonFollow"]
transform = Transform( 1.06445, 0, 0, 0, -6.15838e-08, -2, 0, 1.73261, -1.07511e-07, 0, -0.11253, -0.000217915 )
pixel_size = 0.02
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 2, 9, 12, 7 )

[node name="SpriteRig" type="Spatial" parent="."]
transform = Transform( -0.0644974, 0, 0.997918, 0, 1, 0, -0.997918, 0, -0.0644974, 0, 0, 0 )
script = ExtResource( 6 )

[node name="Body" type="Sprite3D" parent="SpriteRig"]
billboard = 2
shaded = true
texture = ExtResource( 2 )
hframes = 8
vframes = 3

[node name="Clothes" type="Sprite3D" parent="SpriteRig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000154448, 0.00182088, 0.000235306 )
billboard = 2
shaded = true
texture = ExtResource( 4 )
hframes = 80
vframes = 3
frame = 32

[node name="Hair" type="Sprite3D" parent="SpriteRig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0575582, 0 )
billboard = 2
shaded = true
texture = ExtResource( 3 )
hframes = 112
vframes = 4
