[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Characters/CharacterPuppets/Scripts/Puppets/CharacterCore3D.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0176991, 1 )
colors = PoolColorArray( 0.47451, 0.356863, 0.286275, 0.996078, 0.84375, 0.687504, 0.573486, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.00552486, 0.173864 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 5, 1, 1 )
flag_disable_z = true
gravity = Vector3( 2, -2, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="CharacterCore3D" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Modules" type="Spatial" parent="."]

[node name="BodyCollider" type="CollisionShape" parent="."]

[node name="Sounds" type="Spatial" parent="."]

[node name="Particles" type="Spatial" parent="."]

[node name="DustParticles" type="Particles" parent="Particles"]
emitting = false
amount = 20
one_shot = true
process_material = SubResource( 5 )
